--- a/styles/calcStyle.css
+++ b/styles/calcStyle.css
@@ -43,6 +43,12 @@ td
     height:90%;
     font-size:20px;
 }
+.opacity50
+{
+    opacity: 0.5;
+    filter:alpha(opacity=50);
+    zoom:1;
+}
 #spinner {
     position: absolute;
     top: 10px;
